# Agri_Env

./: .dockerignore  .gitignore  Dockerfile  README.md  agri_env.py  inference.py  openenv.yaml  push-exclude.txt  pyproject.toml
agri_env/: __init__.py  client.py  env.py  graders.py  models.py  tasks.py  utils.py
server/: __init__.py  agri_environment.py  app.py
static/: app.js  index.html
tests/: test_submission.py
